# Sherpa

./: Cargo.toml  README.md  \  git_branches_log_2025-10-11_00-04-07.txt
assets/: qtable.csv  qtable1.csv  qtable2.csv  qtable3.csv  qtable4.csv  qtable5.csv  qtable500000.csv  qtableSec.csv  qtable_best.csv  qtable_good.csv  test.xlsx
assets/level1/: level1.json
src/: app.rs  event.rs  main.rs
src/ai/: controller.rs  policy.rs
src/camera/: README.md
src/coin/: detect.rs  mod.rs  spawn.rs
src/collision/: calculation.rs  component.rs  mod.rs
src/components/: motion.rs
src/config/: mod.rs  physics.rs  player.rs  states.rs
src/controller/: mod.rs
src/enemy/: bundle.rs  enemylogic.rs  mod.rs
src/game_ui/: leaderboard.rs  leaderboard.txt  mod.rs  ui.rs
src/map/: game_object_builder.rs  loader.rs  mapdata.rs  mod.rs  util.rs
src/multiplayer/: client.rs  handshake_data.rs  mod.rs  server.rs
src/observer/: mod.rs  plugin.rs  state.rs  system.rs
src/physics/: collision.rs  control.rs  integrate.rs  mod.rs  rope_force.rs
src/physics/physics_core/: gravity.rs
src/player/: bundle.rs  load_players.rs  mod.rs  player_control.rs  player_plugin.rs
src/policy/: action.rs  debug.rs  mod.rs  qtable.rs
src/stateMachine/: mod.rs  move_State.rs  qtable.rs  state.rs  test.xlsx
src/util/: mod.rs
workspaces/ai/example/: observation.rs  qtable.rs  qtable_update.rs  reward.rs
