[package]
name = "bevy-katsuo"

version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
bevy.workspace = true
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
edit-xlsx = "0.4.6"
calamine = { version = "0.31.0", features = ["chrono"] }
csv = "1"

[profile.dev]
opt-level = 1

[features]
default = ["client"]
client = []
server = []
obs = []

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Ket-Hwa Cheng (github: MorningDuringNight)",
    "Tingxu (github: RaineyMisty )",
    "Xiaoting (github: XtWang299)",
    "Zhuoyan (github: qhynSamuel)",
    "Jagger (github: Jagger-Hershey)",
    "Alli (github: AlliBatell)",
    "Sean (github: Sean-Shmulevich)",
]


[workspace.dependencies]
bevy = { version = "0.16.1", features = ["bevy_sprite"] }
rand = "0.9.2"


[workspace]
members = [
    "workspaces/prototype",
    "workspaces/multiplayer",
    "workspaces/slideshow",
    "workspaces/xtask",
]
